force-app/main/default/objects/Lead/fields/Add_to_Nurture_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Nurture_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Lead Path for unqualified leads who will continue to be marketed to.  Not currently associated to any process or trigger.</description>
    <label>Add to Nurture Campaign</label>
    <type>Checkbox</type>
</CustomField>