force-app/main/default/objects/Lead/fields/Date_Converted__c.field-meta.xml
<CustomField>
    <fullName>Date_Converted__c</fullName>
    <formula>ConvertedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Converted</label>
    <type>Date</type>
</CustomField>