force-app/main/default/objects/Lead/fields/Date_of_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Activity__c</fullName>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Last Activity</label>
    <type>Date</type>
</CustomField>