force-app/main/default/objects/Lead/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <label>Days Remaining</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>