force-app/main/default/objects/Lead/fields/Deal_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Approved_Date__c</fullName>
    <description>Stored the date the deal registraion was approved (via field updates) and is used in lead conversion so the opportunity has the date the deal was registered and can be used to count when the deal expires</description>
    <label>Deal Approved Date</label>
    <type>Date</type>
</CustomField>