force-app/main/default/objects/Lead/fields/Delinquency_Risk_Data__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Risk_Data__c</fullName>
    <formula>ENCODED:[treatNullAsNull]IF(ISPICKVAL({!ID:DandbCompany.MarketingPreScreen}, &quot;L&quot;), &quot;Low Risk of Delinquency&quot;, 
IF(ISPICKVAL({!ID:DandbCompany.MarketingPreScreen}, &quot;M&quot;), &quot;Medium Risk of Delinquency&quot;, 
IF(ISPICKVAL({!ID:DandbCompany.MarketingPreScreen}, &quot;H&quot;), &quot;High Risk of Delinquency&quot;, 
&quot;&quot;)))</formula>
    <label>D&amp;B Delinquency Risk</label>
    <type>Text</type>
</CustomField>