force-app/main/default/objects/Lead/fields/Last_Modified_days__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_days__c</fullName>
    <formula>ROUND(NOW()- LastModifiedDate , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>