force-app/main/default/objects/Lead/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>