force-app/main/default/objects/Lead/fields/Lead_Age_days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age_days__c</fullName>
    <formula>ROUND(NOW()-CreatedDate, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>