force-app/main/default/objects/Lead/fields/Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quality__c</fullName>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Lead_Total__c &gt; 0, &apos;0153h000001DJCV&apos;, &apos;0153h000001DJCW&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Lead_Total__c &gt; 5, &apos;0153h000001DJCV&apos;, &apos;0153h000001DJCW&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Lead_Total__c &gt; 10, &apos;0153h000001DJCV&apos;, &apos;0153h000001DJCW&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Lead_Total__c &gt; 15, &apos;0153h000001DJCV&apos;, &apos;0153h000001DJCW&apos;),&apos;&apos;,24,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Quality</label>
    <type>Text</type>
</CustomField>