force-app/main/default/objects/Lead/fields/Lead_Rank__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rank__c</fullName>
    <formula>IF( (  Lead_Total__c  &gt;11),&quot;High&quot;, IF(AND( Lead_Total__c  &lt;11, Lead_Total__c  &gt; 5),&quot;Medium&quot;, &quot;Low&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Rank</label>
    <type>Text</type>
</CustomField>