force-app/main/default/objects/Lead/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Rating,
&quot;Hot&quot;, &quot;0153h000001DJCk&amp;oid=&quot;&amp;$Organization.Id,
&quot;Warm&quot;, &quot;0153h000001DJCl&amp;oid=&quot;&amp;$Organization.Id,
&quot;Cool&quot;, &quot;0153h000001DJCm&amp;oid=&quot;&amp;$Organization.Id,
&quot;0153h000001DJCm&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>