force-app/main/default/objects/Lead/fields/Registration_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expiration__c</fullName>
    <description>Used for deal registration</description>
    <label>Registration Expiration</label>
    <type>Date</type>
</CustomField>