force-app/main/default/objects/Lead/fields/Reported_Convert_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Convert_Date__c</fullName>
    <label>Reported Convert Date</label>
    <type>Date</type>
</CustomField>