force-app/main/default/objects/Lead/fields/Score4__c.field-meta.xml
<CustomField>
    <fullName>Score4__c</fullName>
    <formula>IF(Has_Budget__c,5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>