force-app/main/default/objects/Lead/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <formula>ENCODED:[treatNullAsNull]{!ID:DandbCompany.StockSymbol}</formula>
    <label>Ticker Symbol</label>
    <type>Text</type>
</CustomField>