force-app/main/default/objects/Lead/recordTypes/DealRegistration.recordType-meta.xml
<RecordType>
    <fullName>DealRegistration</fullName>
    <active>true</active>
    <businessProcess>Deal Registration Lead</businessProcess>
    <description>Used by partners to register leads in the Partner Community.</description>
    <label>Deal Registration</label>
</RecordType>