force-app/main/default/objects/Lead/recordTypes/Partner_Application.recordType-meta.xml
<RecordType>
    <fullName>Partner_Application</fullName>
    <active>true</active>
    <businessProcess>Partner Recruitment</businessProcess>
    <description>Used when a potential partner applies to the partner program.</description>
    <label>Partner Application</label>
</RecordType>