force-app/main/default/objects/Lead/listViews/AllLeads.listView-meta.xml
<ListView>
    <fullName>AllLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD_SCORE</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Lead_Quality__c</columns>
    <columns>Source__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads</label>
</ListView>