force-app/main/default/objects/Lead/listViews/Hot_Leads.listView-meta.xml
<ListView>
    <fullName>Hot_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Total__c</field>
        <operation>greaterOrEqual</operation>
        <value>20</value>
    </filters>
    <filters>
        <field>LEAD.RATING</field>
        <operation>equals</operation>
        <value>Hot</value>
    </filters>
    <label>Hot Leads</label>
</ListView>