force-app/main/default/objects/Lead/listViews/Lead_Qualification_Team_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Qualification_Team_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Qualification Team</label>
    <queue>Lead_Qualification_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>