force-app/main/default/objects/Lead/listViews/Marketing_Qualified_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Marketing_Qualified_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Marketing Qualified Leads</label>
    <queue>Marketing_Qualified_Leads</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>