force-app/main/default/objects/Lead/listViews/My_Rejected_Registrations.listView-meta.xml
<ListView>
    <fullName>My_Rejected_Registrations</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Approval_Status__c</columns>
    <columns>LEAD.EMAIL</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.DealRegistration</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>My Rejected Registrations</label>
    <language>en_US</language>
    <sharedTo>
        <allPartnerUsers/>
        <group>Channel_Managers</group>
    </sharedTo>
</ListView>