force-app/main/default/objects/Lead/listViews/New_Deal_Registrations_TEST.listView-meta.xml
<ListView>
    <fullName>New_Deal_Registrations_TEST</fullName>
    <columns>Priority__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Source__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.DealRegistration</value>
    </filters>
    <label>Deal Registrations</label>
    <language>en_US</language>
    <sharedTo>
        <group>Channel_Managers</group>
    </sharedTo>
</ListView>