force-app/main/default/objects/Lead/listViews/Time_Off_Manager_Payroll_Lead.listView-meta.xml
<ListView>
    <fullName>Time_Off_Manager_Payroll_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Time_Off_Manager_Payroll</label>
    <queue>Time_Off_Manager_Payroll</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>