force-app/main/default/objects/Lead/listViews/UnassignedPartnerLeads.listView-meta.xml
<ListView>
    <fullName>UnassignedPartnerLeads</fullName>
    <columns>Priority__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Source__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Partner Leads - Unassigned</label>
    <language>en_US</language>
    <queue>UnassignedPartnerLeads</queue>
</ListView>